# iterm2-agent

./: .gitignore  PRD.md  README.md  pyproject.toml  test_integration.py
config/: default.toml
skill/: SKILL.md
skills/iterm2/: SKILL.md
skills/iterm2-agent/: SKILL.md
src/iterm2_agent/: __init__.py  __main__.py  connection.py  security.py  server.py
src/iterm2_agent/tools/: __init__.py  manage_session.py  read_screen.py  run_command.py  send_control.py  send_text.py  watch_output.py
tests/: test_read_screen.py  test_run_command.py  test_security.py  test_send_control.py
