[project]
name = "iterm2-agent"
version = "0.1.0"
description = "MCP Server for controlling iTerm2 via Python API"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0,<3",
    "iterm2>=2.0",
]

[project.scripts]
iterm2-agent = "iterm2_agent.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/iterm2_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
